--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
 
     <header id="home">
         <nav>
-            <div class="logo">Climate Advisors</div>
+            <div class="logo"><img src="../logo.png" alt="Climate Advisors Logo" style="height: 45px;"></div>
             <ul>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
