--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header id="home">
         <nav>
-            <div class="logo"><img src="logoCA.png" alt="Climate Advisors Logo" style="height: 300px;"></div>
+            <div class="logo"><img src="logoCAcropped.png" alt="Climate Advisors Logo" style="height: 300px;"></div>
             <ul>
                 <li><a href="#about">Sobre Nós</a></li>
                 <li><a href="#services">Serviços</a></li>
