--- a/es/index.html
+++ b/es/index.html
@@ -11,7 +11,7 @@
 
     <header id="home">
         <nav>
-            <div class="logo"><img src="logoCAcropped.png" alt="Climate Advisors Logo" style="height: 70px;"></div>
+            <div class="logo"><img src="../logoCAcropped.png" alt="Climate Advisors Logo" style="height: 100px;"></div>
             <ul>
                 <li><a href="#about">Sobre Nosotros</a></li>
                 <li><a href="#services">Servicios</a></li>
