--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="contact" class="section light-bg">
         <h2>Fale Conosco</h2>
         <p>Estamos em Brasília, DF, com atuação global. Entre em contato para discutir sua estratégia.</p>
-        <p>E-mail: **isadora@plataformacipo.org**</p>
+        <p>E-mail: **climateadvisors@proton.me**</p>
         <p>Telefone/WhatsApp: **+55 61 99371-0770**</p>
         </section>
 
