--- a/es/index.html
+++ b/es/index.html
@@ -67,7 +67,7 @@
     <section id="contact" class="section light-bg">
         <h2>Contáctenos</h2>
         <p>Estamos ubicados en Brasília, DF, con operaciones globales. Póngase en contacto para discutir su estrategia.</p>
-        <p>Correo electrónico: **isadora@plataformacipo.org**</p>
+            <p>E-mail: **climateadvisors@proton.me**</p>
         <p>Teléfono/WhatsApp: **+55 61 99371-0770**</p>
     </section>
 
