--- a/en/index.html
+++ b/en/index.html
@@ -67,7 +67,7 @@
     <section id="contact" class="section light-bg">
         <h2>Contact Us</h2>
         <p>We are based in Brasília, DF, with global operations. Get in touch to discuss your strategy.</p>
-        <p>Email: **isadora@plataformacipo.org**</p>
+        <p>E-mail: **climateadvisors@proton.me**</p>
         <p>Phone/WhatsApp: **+55 61 99371-0770**</p>
     </section>
 
